Added testcases for overlapping intervals filter